--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="description" content="¿Necesitas ayuda para publicar o contratar al mejor talento? Contáctanos en OCC y conoce nuestras soluciones en reclutamiento para empresas" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <link rel="icon" href="/ occ-favicon.png" />
+    <title>Publicar Vacantes | OCC Empresas</title>
   </head>
   <body>
     <div id="root"></div>
