--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="description" content="¿Necesitas ayuda para publicar o contratar al mejor talento? Contáctanos en OCC y conoce nuestras soluciones en reclutamiento para empresas" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/occ-favicon.png?v=2" />
+    <link rel="icon" type="image/png" href="/occ-favi.png?v=2" />
     <title>Publicar Vacantes | OCC Empresas</title>
   </head>
   <body>
