--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="description" content="¿Necesitas ayuda para publicar o contratar al mejor talento? Contáctanos en OCC y conoce nuestras soluciones en reclutamiento para empresas" />
+
+    <!-- Íconos Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/occ-favi.png?v=2" />
+
     <title>Publicar Vacantes | OCC Empresas</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GP2B693V8Y"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-GP2B693V8Y');
-</script>
+    <!-- Google Analytics 4 con Cross-domain -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GP2B693V8Y"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      
+      // Inicializa GA4
+      gtag('js', new Date());
+
+      // Configura GA4 con multidominio
+      gtag('config', 'G-GP2B693V8Y', {
+        'linker': {
+          'domains': [
+            'b2b.occ.com.mx',
+            'reclutamiento.occ.com.mx'
+          ]
+        }
+      });
+    </script>
   </body>
 </html>
