--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="es">
   <head>
 <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@4/dist/fp.min.js"></script>
+    
+<!-- HubSpot Tracking Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/YOUR_PORTAL_ID.js">
+</script>
+
 <script>
 (async () => {
   const setCookie = (k,v,days=365) => {
